2007-08-10  Torsten Rahn  <rahn@kde.org>
	Fixing issue reported by Luis Silva by making sure 
	that the preview images match the expected size:

	" Also the 'map view' tab gets garbled with previews of 
	sizes other than 136x136. The previews go on top of each other."

2007-08-10  Inge Wallin  <inge@lysator.liu.se>

	Simplify code to make it easier to find common code.
	* src/lib/placemarkpainter.cpp (sphericalPaintPlaceFolder):
	Simplify code structure.
	(rectangularPaintPlaceFolder): Reindent to follow code structure.
	Also makes it more like sphericalPaintPlaceFolder
	
	Integrate some changes from the KML SoC project.
	* src/lib/placemarkpainter.{h,cpp} (paintPlaceFolder): Remove
	double definition and #ifdef test
	(sphericalPaintPlaceFolder): Take firstTime parameter
	(rectangularPaintPlaceFolder): Take firstTime parameter
	(paintPlaceFolder): Use new call signatures.
	
	Fix Krazy issue 18: check for inappropriate pass-by-value args
	* src/lib/placemarkmanager.{h,cpp} (loadDocumentFromCache): Take
	QString& parameter.

2007-08-10  Torsten Rahn  <rahn@kde.org>

    - renaming katlasdirs.h -> MarbleDirs.h

     * ChangeLog
     * src/lib/tilescissor.cpp
     * src/lib/AbstractScanlineTextureMapper.cpp
     * src/lib/katlasdirs.h
     * src/lib/gps/Waypoint.cpp
     * src/lib/gps/TrackSegment.cpp
     * src/lib/placemarkpainter.cpp
     * src/lib/TileLoader.cpp
     * src/lib/katlasaboutdialog.cpp
     * src/lib/placemarkmanager.{h,cpp}
     * src/lib/placemarkinfodialog.cpp
     * src/lib/placemark.cpp
     * src/lib/LegendBrowser.cpp
     * src/lib/HttpDownloadManager.cpp
     * src/lib/vectorcomposer.cpp
     * src/lib/MarbleControlBox.cpp
     * src/lib/MarbleModel.cpp
     * src/lib/HttpFetchFile.cpp
     * src/lib/GlobeScanlineTextureMapper.cpp
     * src/lib/maptheme.cpp
     * src/lib/TextureTile.cpp
     * src/lib/tinywebbrowser.cpp
     * src/lib/MarbleDirs.h
     * src/lib/katlaswindrose.cpp
     * src/lib/CMakeLists.txt
     * src/lib/katlasflag.cpp